--- a/spec.bib
+++ b/spec.bib
@@ -1,7 +1,9 @@
-@online{rfc3696_errata3
-    author = "John Klensin",
-    title = "RFC3696 errata 3",
-    url = "https://www.rfc-editor.org/errata_search.php?rfc=3696",
-    addendum = "(accessed: 23/12/2025)"
+@misc{klensin_2005_rfc,
+  author = {Klensin, John},
+  month = {07},
+  title = {RFC 3696 Errata 3},
+  url = {https://www.rfc-editor.org/errata_search.php?rfc=3696},
+  urldate = {2025-12-23},
+  year = {2005},
+  organization = {Rfc-editor.org}
 }
-
