--- a/spec.tex
+++ b/spec.tex
@@ -55,22 +55,30 @@
 
         \subsection{Database}
             User accounts are stored in the table \textbf{users}. The collum
-            \textbf{email} is used as the key. \\
-            \begin{tabularx}{\linewidth}{lXXX}
+            \textbf{username} is used as the key. \\
+            \begin{tabularx}{\linewidth}{llllX}
                 \textbf{Name} & \textbf{Type} & \textbf{Limits} &
-                \textbf{Description} \\
+                \textbf{Restrictions} & \textbf{Description} \\
                 \hline
-                email & varchar & 254 characters \autocite[1]{klensin_2005_rfc} & Email
-                address of user, verified at signup. \\
-                username & varchar & 126 characters & Store usernames. \\
-                password\_hash & bytea & no limit & Stores hashed password. \\
-                account\_creation\_date & timestamptz & 4713 BC to 5874897 AD &
-                Store account creation date and timezone. \\
+                email & varchar & 254 characters \autocite[1]{klensin_2005_rfc}
+                & Unique and not null & Email address of user, verified at signup. \\
+                username & varchar & 126 characters & Primary key & Store usernames. \\
+                password\_hash & bytea & no limit & Not null & Stores hashed password. \\
+                account\_creation\_date & timestamp & 4713 BC to 5874897 AD &
+                Not null & Store account creation date and timezone. \\
                 messages\_sent & integer & \(-2,147,483,648\) to
-                \(2,147,483,647\) & Store number of messages sent. \\
+                \(2,147,483,647\) & Not null & Store number of messages sent. \\
                 messages\_received & integer & \(-2,147,483,648\) to
-                \(2,147,483,647\) & Store number of messages received. \\
+                \(2,147,483,647\) & Not null & Store number of messages received. \\
+                last\_login & timestamp & 4713BC to 5874897 AD & Can be null &
+                Store time of last login. \\
             \end{tabularx}
+
+        \section{Database access}
+            I am using \href{https://www.psycopg.org/docs/index.html}{Psycopg}
+            for connecting to the database. Connections are thread safe
+            \autocite[2]{} and can either create a connection per thread or by
+            using the same connection and creating seperate cursors.
 
     \newpage
     \printbibliography
